--- a/StudentUser/App.config
+++ b/StudentUser/App.config
@@ -1,24 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
   </configSections>
   <appSettings>
     <!--116.212.115.15,118.184.18.254-->
     <!--通讯服务器-->
-    <add key="serverIP" value="118.184.18.254"/>
+    <add key="serverIP" value="118.184.18.254" />
     <!--通讯服务器端口-->
-    <add key="serverPort" value="8899"/>
+    <add key="serverPort" value="8899" />
     <!--文件上传服务器-->
-    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile"/>
+    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile" />
     <!--音视频服务器(可以包含端口)-->
     <!--139.196.217.92:10554-->
-    <add key="RTSPserverIP" value="118.184.18.254:10554"/>
+    <add key="RTSPserverIP" value="118.184.18.254:10554" />
     <!--UDP端口-->
-    <add key="UDPPort" value="10888"/>
+    <add key="UDPPort" value="10888" />
     <!--教师端IP地址，用于局域网发送UDP消息-->
-    <add key="TeacherIP" value="127.0.0.1"/>
+    <add key="TeacherIP" value="127.0.0.1" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Vlc.DotNet.Core" publicKeyToken="84529da31f4eb963" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.149.0" newVersion="2.1.149.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Vlc.DotNet.Core.Interops" publicKeyToken="84529da31f4eb963" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.149.0" newVersion="2.1.149.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
