--- a/SharedForms/SharedForms.csproj
+++ b/SharedForms/SharedForms.csproj
@@ -80,8 +80,15 @@
     <Compile Include="ControlExtensions.cs" />
     <Compile Include="GlobalVariable.cs" />
     <Compile Include="Models\ChatStore.cs" />
+    <Compile Include="PictureShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PictureShow.Designer.cs">
+      <DependentUpon>PictureShow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AudioRecorder.cs" />
+    <Compile Include="RecordVoice.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -112,6 +119,9 @@
   <ItemGroup>
     <EmbeddedResource Include="ChatForm.resx">
       <DependentUpon>ChatForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PictureShow.resx">
+      <DependentUpon>PictureShow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Resource1.resx">
