--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -87,6 +87,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="UserActivityHook.cs" />
+    <Compile Include="VideoShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoShow.Designer.cs">
+      <DependentUpon>VideoShow.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewRtsp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,6 +145,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VideoShow.resx">
+      <DependentUpon>VideoShow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ViewRtsp.resx">
       <DependentUpon>ViewRtsp.cs</DependentUpon>
     </EmbeddedResource>
