--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -86,13 +86,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ScreenImage.cs" />
     <Compile Include="UserActivityHook.cs" />
-    <Compile Include="VideoShow.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="VideoShow.Designer.cs">
-      <DependentUpon>VideoShow.cs</DependentUpon>
-    </Compile>
     <Compile Include="ViewRtsp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,9 +140,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="VideoShow.resx">
-      <DependentUpon>VideoShow.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ViewRtsp.resx">
       <DependentUpon>ViewRtsp.cs</DependentUpon>
     </EmbeddedResource>
