--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -192,6 +192,10 @@
       <Project>{56b28b98-487b-450f-8b3a-654b668db221}</Project>
       <Name>SharedForms</Name>
     </ProjectReference>
+    <ProjectReference Include="C:\Users\terius\Desktop\thegrouper\Grouper\CodeVendor.Controls.csproj">
+      <Project>{d5d88eb0-23b9-46ce-b23c-c6245ecf023c}</Project>
+      <Name>CodeVendor.Controls</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\文件共享.png" />
