--- a/NewTeacher/NewTeacher.csproj
+++ b/NewTeacher/NewTeacher.csproj
@@ -40,15 +40,6 @@
     <Reference Include="AxInterop.AXVLC">
       <HintPath>..\lib\vlc\new\AxInterop.AXVLC.dll</HintPath>
     </Reference>
-    <Reference Include="DevExpress.BonusSkins.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.Data.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Images.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DevExpress.Printing.v16.2.Core, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Utils.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.XtraBars.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.XtraEditors.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="Interop.AXVLC">
       <HintPath>..\lib\vlc\new\Interop.AXVLC.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
@@ -111,12 +102,6 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainFormOld.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainFormOld.Designer.cs">
-      <DependentUpon>MainFormOld.cs</DependentUpon>
-    </Compile>
     <Compile Include="MyForm2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,9 +152,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainFormOld.resx">
-      <DependentUpon>MainFormOld.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm2.resx">
       <DependentUpon>MyForm2.cs</DependentUpon>
@@ -227,6 +209,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\录制.png" />
+    <None Include="Resources\未录制.png" />
     <Content Include="老师图标.ico" />
     <None Include="Resources\在线.png" />
     <None Include="Resources\老师.png" />
