--- a/StudentUser/App.config
+++ b/StudentUser/App.config
@@ -15,7 +15,7 @@
     <add key="RTSPserverIP" value="182.92.121.160:10554" />
     <!--UDP端口-->
     <add key="UDPPort" value="10888" />
-    <!--教师端IP地址，用于局域网发送UDP消息-->
+    <!--主机端IP地址，用于局域网发送UDP消息-->
     <add key="TeacherIP" value="127.0.0.1" />
   </appSettings>
   <startup>
