--- a/NewTeacher/NewTeacher.csproj
+++ b/NewTeacher/NewTeacher.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>老师图标.ico</ApplicationIcon>
+    <ApplicationIcon>指挥中心.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AxInterop.AXVLC">
@@ -211,13 +211,14 @@
   <ItemGroup>
     <None Include="Resources\录制.png" />
     <None Include="Resources\未录制.png" />
+    <None Include="Resources\客户端.png" />
+    <None Include="Resources\主机端.png" />
+    <Content Include="指挥中心.ico" />
     <Content Include="老师图标.ico" />
     <None Include="Resources\在线.png" />
-    <None Include="Resources\老师.png" />
     <None Include="Resources\离线.png" />
     <None Include="Resources\签到.png" />
     <None Include="Resources\上课点名.png" />
-    <None Include="Resources\学生.png" />
     <None Include="Resources\群聊.png" />
     <None Include="Resources\分组.png" />
     <None Include="Resources\查看.png" />
