--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -24,7 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -88,12 +88,6 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="UserActivityHook.cs" />
-    <Compile Include="ViewRtsp.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ViewRtsp.Designer.cs">
-      <DependentUpon>ViewRtsp.cs</DependentUpon>
-    </Compile>
     <Compile Include="VLCPlayer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,7 +108,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VLCPlus.cs" />
     <EmbeddedResource Include="BlackScreen.resx">
       <DependentUpon>BlackScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -143,9 +136,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ViewRtsp.resx">
-      <DependentUpon>ViewRtsp.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="VLCPlayer.resx">
       <DependentUpon>VLCPlayer.cs</DependentUpon>
     </EmbeddedResource>
