--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -75,6 +75,7 @@
     <Compile Include="AESHelper.cs" />
     <Compile Include="AESHelper2.cs" />
     <Compile Include="AESHelper3.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="ExcelHelper.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="JsonHelper.cs" />
