--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Request\EmptyRequest.cs" />
     <Compile Include="Request\LoginRequest.cs" />
     <Compile Include="Request\SendRequest.cs" />
-    <Compile Include="Request\TeamChatListRequest.cs" />
+    <Compile Include="Request\TeacherTeam.cs" />
     <Compile Include="Request\LockScreenRequest.cs" />
     <Compile Include="Request\GroupChatRequest.cs" />
     <Compile Include="Request\PrivateChatRequest.cs" />
