--- a/SharedForms/SharedForms.csproj
+++ b/SharedForms/SharedForms.csproj
@@ -309,6 +309,9 @@
   <ItemGroup>
     <None Include="Resources\playvoice.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\新消息.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
