--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapping.cs" />
     <Compile Include="Request\DeleteTeamMemberRequest.cs" />
     <Compile Include="Request\EmptyRequest.cs" />
     <Compile Include="Request\IChatRequest.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Response\LoginResult.cs" />
     <Compile Include="LoginUserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Team.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Views\ChatTeamInfo.cs" />
     <Compile Include="Views\ScreenCaptureInfo.cs" />
