--- a/vlctest/packages.config
+++ b/vlctest/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AudioSwitcher.AudioApi" version="3.0.0" targetFramework="net46" />
+  <package id="AudioSwitcher.AudioApi.CoreAudio" version="3.0.0.1" targetFramework="net46" />
   <package id="DirectShowLib" version="1.0.0" targetFramework="net46" />
+  <package id="NAudio" version="1.8.3" targetFramework="net46" />
   <package id="nVLC" version="2.1.0.3" targetFramework="net46" />
   <package id="Vlc.DotNet.Core" version="2.1.154" targetFramework="net46" />
   <package id="Vlc.DotNet.Core.Interops" version="2.1.154" targetFramework="net46" />
