--- a/vlctest/vlctest.csproj
+++ b/vlctest/vlctest.csproj
@@ -73,6 +73,12 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AudioSwitcher.AudioApi, Version=3.0.0.209, Culture=neutral, PublicKeyToken=fda5729e2db3a64f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AudioSwitcher.AudioApi.3.0.0\lib\net40\AudioSwitcher.AudioApi.dll</HintPath>
+    </Reference>
+    <Reference Include="AudioSwitcher.AudioApi.CoreAudio, Version=3.0.0.209, Culture=neutral, PublicKeyToken=fda5729e2db3a64f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AudioSwitcher.AudioApi.CoreAudio.3.0.0.1\lib\net40\AudioSwitcher.AudioApi.CoreAudio.dll</HintPath>
+    </Reference>
     <Reference Include="AxInterop.AXVLC">
       <HintPath>..\..\..\dll\vlc\AxInterop.AXVLC.dll</HintPath>
     </Reference>
@@ -82,6 +88,9 @@
     <Reference Include="Interop.AXVLC">
       <HintPath>..\..\..\dll\vlc\Interop.AXVLC.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="NAudio, Version=1.8.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NAudio.1.8.3\lib\net35\NAudio.dll</HintPath>
     </Reference>
     <Reference Include="nVLC, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\nVLC.2.1.0.3\lib\net40\nVLC.dll</HintPath>
@@ -114,6 +123,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DirectShowForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DirectShowForm.Designer.cs">
+      <DependentUpon>DirectShowForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ffmpegTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +151,12 @@
     <Compile Include="Models\ENUM.cs" />
     <Compile Include="Models\GL.cs" />
     <Compile Include="Models\OnlineUser.cs" />
+    <Compile Include="NAudioForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NAudioForm.Designer.cs">
+      <DependentUpon>NAudioForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="NVLCForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +177,9 @@
     <Compile Include="VLCForm.Designer.cs">
       <DependentUpon>VLCForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DirectShowForm.resx">
+      <DependentUpon>DirectShowForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ffmpegTest.resx">
       <DependentUpon>ffmpegTest.cs</DependentUpon>
     </EmbeddedResource>
@@ -164,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GridForm.resx">
       <DependentUpon>GridForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NAudioForm.resx">
+      <DependentUpon>NAudioForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NVLCForm.resx">
       <DependentUpon>NVLCForm.cs</DependentUpon>
