--- a/StudentUser/App.config
+++ b/StudentUser/App.config
@@ -17,6 +17,7 @@
     <add key="UDPPort" value="10888" />
     <!--主机端IP地址，用于局域网发送UDP消息-->
     <add key="TeacherIP" value="127.0.0.1" />
+    <add key="IsHuiShen" value="1"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
