--- a/NewTeacher/App.config
+++ b/NewTeacher/App.config
@@ -15,6 +15,7 @@
     <add key="RTSPserverIP" value="182.92.121.160:10554"/>
     <!--UDP端口-->
     <add key="UDPPort" value="10888"/>
+    <add key="IsHuiShen" value="1"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
