--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -80,6 +80,7 @@
     <Compile Include="FileHelper.cs" />
     <Compile Include="JsonHelper.cs" />
     <Compile Include="Loger.cs" />
+    <Compile Include="PingNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSAHelper.cs" />
     <Compile Include="StringHelper.cs" />
