--- a/EduService/packages.config
+++ b/EduService/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DirectShowLib" version="1.0.0" targetFramework="net46" />
   <package id="SuperSocket.ClientEngine" version="0.10.0" targetFramework="net46" />
   <package id="SuperSocket.ProtoBase" version="1.7.0.17" targetFramework="net452" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net46" />
