--- a/StudentUser/App.config
+++ b/StudentUser/App.config
@@ -10,9 +10,9 @@
     <add key="serverPort" value="8899" />
     <!--文件上传服务器-->
     <add key="UploadFileServer" value="http://182.92.121.160:8080/edu-server/UploadFile" />
-    <!--音视频服务器(可以包含端口)-->
-    <!--139.196.217.92:10554-->
+    <!--音视频服务器IP-->
     <add key="RTSPserverIP" value="139.196.217.92"/>
+    <!--音视频服务器端口-->
     <add key="RTSPserverPort" value="10554"/>
     <!--UDP端口-->
     <add key="UDPPort" value="10888" />
